[package]
name = "artengine-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.64"
console = "0.15.1"
image = "0.24.1"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
clap_complete = "3.1"
version_check = "0.9"

[dependencies.clap]
version = "3.1.8"
features = ["suggestions", "color", "wrap_help", "cargo", "unstable-grouped"]