[package]
name = "layerfusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.1.8", features = ["derive"] }
console = "0.15.1"
eyre = "0.6.8"
figment = { version = "0.10.10", features = ["toml"] }
image = "0.24.1"
log = "0.4.19"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.44"
